--- a/MythicMobs_edit.csproj
+++ b/MythicMobs_edit.csproj
@@ -446,7 +446,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="image\MMD-work-B.jpg" />
+    <Resource Include="image\work-36.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('packages\Fody.6.0.0\build\Fody.targets')" />
