--- a/MythicMobs_edit.csproj
+++ b/MythicMobs_edit.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Obj_save\Mob\AI.cs" />
     <Compile Include="Obj_save\Mob\BossBar.cs" />
     <Compile Include="Obj_save\Mob\DamageModifiers.cs" />
+    <Compile Include="Obj_save\Mob\Disguise.cs" />
     <Compile Include="Obj_save\Mob\Drops.cs" />
     <Compile Include="Obj_save\Mob\Equipment.cs" />
     <Compile Include="Obj_save\Mob\LevelModifiers.cs" />
